# dwd

./: .gitignore  .readthedocs.yml  CHANGES.md  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.py  updates.MD
doc/: references.md
doc/example_notebooks/: 2D visualization.ipynb  Basic functionality.ipynb
doc/example_notebooks/.ipynb_checkpoints/: 2D visualization-checkpoint.ipynb
doc/figures/: make_figures.py
docs/: conf.py  index.rst  solvers.rst
dwd/: KernelClf.py  __init__.py  cv.py  dwd.py  gen_dwd.py  gen_kern_dwd.py  kern_md.py  kernel_utils.py  linear_model.py  sim_fun.py  socp_dwd.py  svm.py  utils.py  viz.py
iain_only/: (draft) generalized DWD by hand.ipynb  (draft) kernel DWD with MM algo.ipynb  (first try prototyping) DWD.ipynb  Cross Validation mixin.ipynb  cvxpy SVM original example.ipynb  dep code to save.ipynb  sklearn prototyping.ipynb
iain_only/.ipynb_checkpoints/: (draft) generalized DWD with cvxpy-checkpoint.ipynb  (draft) kernel DWD with MM algo-checkpoint.ipynb  (draft) kernel DWD with cvxpy-checkpoint.ipynb  2D visualization-checkpoint.ipynb
iain_only/old/: old_gen_dwd.py
