[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "dwd"
author="Iain Carmichael"
author-email="dc9@cornell.edu"
maintainer="Kitware Medical"
maintainer-email="david.allemang@kitware.com"
home-page = "https://github.com/slicersalt/dwd"
description-file = "README.rst"
requires-python=">=3.6"
requires = [
    "numpy",
    "cvxpy",
    "sklearn",
    "matplotlib"
]
classifiers = [
    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3 :: Only",

    "Development Status :: 4 - Beta",

    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",

    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
