[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dwd"
authors = [
    {name = 'Iain Carmichael', email = 'idc9@cornell.edu'},
    {name = 'David Allemang', email = 'david.allemang@kitware.com'},
]
maintainers = [
    {name = 'Kitware Medical', email = 'david.allemang@kitware.com'}
]
dependencies = [
    "numpy",
    "cvxpy",
    "scikit-learn",
    "matplotlib"
]
requires-python=">=3.6"
readme = 'README.md'
classifiers = [
    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only",

    "Development Status :: 4 - Beta",

    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",

    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dynamic = ['version', 'description']

[project.optional-dependencies]
test = []
doc = [
    'sphinx',
    'sphinx-rtd-theme',
]

[project.urls]
Source = 'https://github.com/slicersalt/dwd'
